[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/ShipporiAntique-Medium.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/deck_scene/banner/banner.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/deck_scene/select_use_scene.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/online/entrance_scene.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="VS_EntranceScene" type="Node"]
script = ExtResource( 5 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )

[node name="Matching" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -224.0
margin_top = -168.0
margin_right = 224.0
margin_bottom = -32.0
disabled = true
text = "繋ぐ"

[node name="ButtonBack" type="Button" parent="Panel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 208.0
margin_bottom = 80.0
text = "BACK"

[node name="Label" type="Label" parent="Panel"]
margin_left = 320.0
margin_top = 320.0
margin_right = 960.0
margin_bottom = 512.0
text = "Online 対戦"
align = 1
valign = 1

[node name="DeckBanner" parent="Panel" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -320.0
margin_right = 360.0
margin_bottom = -104.0

[node name="ButtonDeckChange" type="Button" parent="Panel/DeckBanner"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="DeckSelectScene" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="pressed" from="Panel/Matching" to="." method="_on_Matching_pressed"]
[connection signal="pressed" from="Panel/ButtonBack" to="." method="_on_ButtonBack_pressed"]
[connection signal="pressed" from="Panel/DeckBanner/ButtonDeckChange" to="." method="_on_ButtonDeckChange_pressed"]
[connection signal="decided" from="DeckSelectScene" to="." method="_on_DeckSelectScene_decided"]
